wordpress-on-kubernetes/wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: wordpress
spec:
    selector:
        app: wordpress
    ports:
        - protocol: TCP
          port: 80
